--- a/{{ cookiecutter.formal_name }}/app/src/main/AndroidManifest.xml
+++ b/{{ cookiecutter.formal_name }}/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Launcher">
-        <activity android:name="org.beeware.android.MainActivity">
+        <activity
+            android:name="org.beeware.android.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
